fixed PlaceCard length when business names are too long.

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,5 +1,5 @@
 .HomeDisplayCont{
-  border: 10px solid #aa0e25;
+  border: 5px solid #aa0e25;
   border-radius: 10px;
   width: 80%;
   height:450px;
